data/Tests/Lua/System/Fail/ShipWrongDeviceTypes/Main.(DeveloperAddon).xdb
<?xml version="1.0" encoding="UTF-8" ?>
<DeveloperAddon>
     <scriptFileRefs>
          <Item href="/Interface/Common/Script/AddonBase.lua" />
          <Item href="/Tests/Lua/Lib/Login.lua" /><Item href="/Tests/Lua/Lib/GlobalParams.lua" />
          <Item href="/Tests/Lua/Lib/ExitTest.lua" />
          <Item href="/Tests/Lua/Lib/Log.lua" />
          <Item href="/Tests/Lua/Lib/Timer.lua" />
          <Item href="/Tests/Lua/Lib/GetId.lua" />
          <Item href="/Tests/Lua/Lib/Units/LearnSpell.lua" />
          <Item href="Script.lua" />
     </scriptFileRefs>

     <params>
          <Item>
               <name>login</name>
               <value>chip</value>
          </Item>
          <Item>
               <name>password</name>
               <value>chip</value>
          </Item>
          <Item>
               <name>avatar</name>
               <value>ShipTest7</value>
          </Item>
          <Item>
               <name>SummonShipSpell</name>
               <value>Mechanics/Spells/Cheats/SummonShip/SummonShipSpellKaniaNew.(SpellCasterSelf).xdb</value>
          </Item>
          <Item>
               <name>DesummonShipSpell</name>
               <value>Mechanics/Spells/Cheats/UnsummonShip/UnsummonShipSpell.xdb</value>
          </Item>
     </params>
</DeveloperAddon>